# basic-cpp-server

./: .bazelrc  .dockerignore  .gitignore  BUILD  BUILD.bazel  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.dev  Makefile  WORKSPACE  dashboard.hpp  debug.html  docker-compose.dev.yaml  docker-compose.yml  emily.hpp  encoding.hpp  home.hpp  layout.hpp  main.cpp  run.sh  static_string.hpp  tags.hpp
scripts/: watch.sh
src/: BUILD  contributions.hpp  emily.hpp  home.hpp  json_demo.hpp  layout.hpp  linkedin_logo.hpp  logo_svgs.hpp  main.cpp  shop.hpp  tags.hpp  tailwind_gzipped.hpp
src/js/: compile_tailwind.py  tailwind.js
test/: BUILD  static_tests.hpp  test.cpp
